// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrainModal.vue add requirements renders correctly 1`] = `
<bh-modal-stub open="true" title="Training Status" backgroundcloses="true">
  <div class="train-modal">
    <div class="bh-grid bh-grid--column"><strong class="text-color-danger text-center bh-grid__item">
        One or more languages cannot be trained in the moment.</strong>
      <!---->
      <div class="train-modal__wrapper bh-grid__item--nested">
        <div><strong>Missing requirements</strong>
          <div class="train-modal__wrapper__content-requirements">
            <div class="train-modal__wrapper__content__item">
              <p> requirement 1
                <bh-language-flag-stub language="en" class="train-modal__wrapper__content__item__flag"></bh-language-flag-stub>
              </p>
            </div>
          </div>
        </div>
        <!---->
      </div>
    </div>
  </div>
  <div class="bh-grid__item text-center train-modal__buttons">
    <bh-button-stub primary="true" type="button">
      <bh-icon-stub value="school"></bh-icon-stub> <span>Train</span>
    </bh-button-stub>
  </div>
</bh-modal-stub>
`;

exports[`TrainModal.vue add warning renders correctly 1`] = `
<bh-modal-stub open="true" title="Training Status" backgroundcloses="true">
  <div class="train-modal">
    <div class="bh-grid bh-grid--column">
      <!----> <strong class="text-color-primary text-center bh-grid__item">
        Your bot is ready to be trained!</strong>
      <div class="train-modal__wrapper bh-grid__item--nested">
        <!---->
        <div><strong>Warnings</strong>
          <div class="train-modal__wrapper__content-warnings">
            <div class="train-modal__wrapper__content__item">
              <p> warning 1
                <bh-language-flag-stub language="en" class="train-modal__wrapper__content__item__flag"></bh-language-flag-stub>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="bh-grid__item text-center train-modal__buttons">
    <bh-button-stub primary="true" type="button">
      <bh-icon-stub value="school"></bh-icon-stub> <span>Train</span>
    </bh-button-stub>
  </div>
</bh-modal-stub>
`;

exports[`TrainModal.vue renders correctly 1`] = `
<bh-modal-stub open="true" title="Training Status" backgroundcloses="true">
  <div class="train-modal">
    <div class="bh-grid bh-grid--column">
      <!----> <strong class="text-color-primary text-center bh-grid__item">
        Your bot is ready to be trained!</strong>
      <!---->
    </div>
  </div>
  <div class="bh-grid__item text-center train-modal__buttons">
    <bh-button-stub primary="true" type="button">
      <bh-icon-stub value="school"></bh-icon-stub> <span>Train</span>
    </bh-button-stub>
  </div>
</bh-modal-stub>
`;
